--- a/app/scss/blocks/video.scss
+++ b/app/scss/blocks/video.scss
@@ -1,6 +1,13 @@
 .video {
   margin-top: 89px;
-  
+
+  @include breakpoint($tablet-bp) {
+    margin-top: 60px;
+  }
+
+  @include breakpoint($tablet-bp) {
+    margin-top: 30px;
+  }
 
   &__link {
     min-height: 500px;
@@ -11,6 +18,11 @@
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+
+    @include breakpoint($tablet-bp) {
+      min-height: 300px;
+      background-position: center;
+    }
 
     svg {
       z-index: 10;
