--- a/app/scss/components/drop-menu.scss
+++ b/app/scss/components/drop-menu.scss
@@ -1,7 +1,6 @@
 .drop-menu {
   position: relative;
   padding-right: 13px;
-  border-bottom: 10px solid transparent;
 
   &:hover {
 
@@ -14,6 +13,7 @@
   &::after {
     content: '+';
     position: absolute;
+    font-size: 16px;
     right: 0;
     top: 50%;
     transform: translateY(-50%);
