--- a/app/scss/components/object-new.scss
+++ b/app/scss/components/object-new.scss
@@ -4,11 +4,32 @@
   width: 100%;
   margin-left: 30px;
   margin-bottom: 30px;
-  padding: 40px 0 30px 40px;
+  // padding: 40px 0 30px 40px;
   background-color: rgb(248, 248, 248);
   position: relative;
   overflow: hidden;
+
+
   &__link {
+    padding: 40px 0 30px 40px;
+    height: 100%;
+    display: block;
+    z-index: 1;
+    transition: all 0.3s linear;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: darken($text, 15%);
+      opacity: 0;
+      z-index: 2;
+      top: 0;
+      left: 0;
+      transition: opacity 0.3s linear;
+    }
 
     &:active {
 
@@ -19,12 +40,16 @@
 
     &:hover {
 
+      &::before {
+        opacity: 0.4;
+      }
+
       .object-new__img {
         transform: scale(1.1);
       }
 
-      .object-new__title {
-        color: darken($accent, 13%);
+      .object-new__type {
+        color: lighten($accent, 23%);
       }
     }
 
@@ -37,26 +62,6 @@
     position: relative;
     z-index: 2;
   }
-
-  // &__title-link {
-  //   @extend %dmsans-700;
-  //   font-size: 20px;
-  //   line-height: 1.2;
-  //   color: darken($title, 20%);
-  //   transition: color 0.2 linear;
-
-  //   &:active {
-  //     color: $bg;
-  //   }
-
-  //   &:hover {
-  //     color: darken($accent, 13%);
-  //   }
-
-  //   &:focus {
-  //     outline-color:$accent;
-  //   }
-  // }
 
   &__title {
     max-width: 180px;
