--- a/app/scss/global/_global.scss
+++ b/app/scss/global/_global.scss
@@ -13,6 +13,11 @@ a {
   text-decoration: none;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-size: 14px;
   color: $grey;
@@ -31,11 +36,28 @@ body {
   }
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main {
+  flex: 1 0 auto;
+}
+
 .title {
   font-size: 36px;
   line-height: 1.16;
   @extend %dmsans-700;
   color: darken($title, 20%);
+
+  @include breakpoint($mobile-bp) {
+   font-size: 24px;
+  }
+
+ 
+
 }
 
 .visually-hidden {
