fix rangeslider here

--- a/app/scss/global/_vars.scss
+++ b/app/scss/global/_vars.scss
@@ -26,6 +26,11 @@ $mobile-bp: 540px;
   font-weight: 700;
 }
 
+%rubik-300 {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 300;
+}
+
 %rubik-400 {
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
