--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,6 +12,8 @@
 @import "blocks/new";
 @import "blocks/video";
 @import "blocks/insights";
+@import "blocks/bredcrumbs";
+@import "blocks/product-grid";
 @import "blocks/footer";
 
 
@@ -25,4 +27,6 @@
 @import "components/object-new";
 @import "components/insights-card";
 @import "components/sponsor";
+@import "components/filter-aside";
+@import "components/recent";
 
