add product-grid without adaptive

--- a/app/scss/blocks/bredcrumbs.scss
+++ b/app/scss/blocks/bredcrumbs.scss
@@ -20,6 +20,7 @@
   }
 
   &__item {
+
     &:not(:first-child) {
       padding-left: 17px;
       margin-left: 12px;
@@ -29,7 +30,15 @@
         content: '/';
         position: absolute;
         left: 0;
+        top: 3px;
         color: $grey;
+      }
+    }
+
+    &--active {
+
+      .bredcrumbs__link {
+        text-shadow: 1px 0px 0px darken($title, 5%);
       }
     }
   }
@@ -39,5 +48,11 @@
     line-height: 1.7;
     color: $title;
     @extend %rubik-400;
+    transition: color 0.3s linear,
+      text-shadow 0.3s linear;
+
+    &:hover {
+      text-shadow: 1px 0px 0px darken($title, 10%);
+    }
   }
 }
