--- a/app/scss/components/recent.scss
+++ b/app/scss/components/recent.scss
@@ -5,45 +5,70 @@
     display: flex;
     align-items: center;
     position: relative;
-   z-index: 1;
-  
+    z-index: 1;
+    background-color: $white;
+    font-size: 0;
 
-     &:hover {
 
-       &::before {
-         content: '';
-         position: absolute;
-         top: -0px;
-         bottom: -0px;
-         left: -0px;
-         right: -0px;
-         z-index: -1;
-         filter: blur(13px);
-       }
 
-       &::after {
-         content: '';
-         position: absolute;
-         top: -1px;
-         bottom: -1px;
-         left: -1px;
-         right: -1px;
-         z-index: -1;
-         border-radius: 12px;
-       }
+    &:hover {
+      // padding-left: 15px;
+      border-radius: 39px;
+      overflow: hidden;
+      font-size: 14px;
 
-       &::before,
-       &::after {
-         @extend %hover-bg;
-       }
-     }
+      &::before {
+        content: '';
+        position: absolute;
+        top: -0px;
+        bottom: -0px;
+        left: -0px;
+        right: -0px;
+        z-index: -2;
+        filter: blur(13px);
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: -0px;
+        bottom: -0px;
+        left: -0px;
+        right: -0px;
+        z-index: -1;
+        border-radius: 12px;
+      }
+
+      &::before,
+      &::after {
+        @extend %hover-bg;
+      }
+
+      .recent__image {
+        border-color: transparent;
+        transform: scale(0);
+      }
+
+      .recent__content {
+        transform: rotate(-1deg);
+        border: 2px solid #fff;
+      }
+
+      .recent__number {
+        opacity: 1;
+        transform: rotateY(-360deg)
+      }
+    }
   }
 
   &__image {
+    background-color: #fff;
     width: 70px;
     height: 70px;
     padding: 2px;
     border: solid 3px lighten($accent, 25%);
+    transform: scale(1);
+    transition: transform .3s linear;
   }
 
   &__img {
@@ -56,11 +81,15 @@
 
   &__content {
     padding-left: 20px;
+    width: 100%;
+    background-color: #fff;
+    transition: transform .3s linear;
   }
 
   &__name,
   &__price {
     @extend %rubik-400;
+    font-size: 14px;
     line-height: 1;
     color: $text;
   }
@@ -76,6 +105,18 @@
 
   &__star {
     margin-bottom: 10px;
+  }
+
+  &__number {
+    position: absolute;
+    left: 20px;
+    font-size: 28px;
+    text-transform: uppercase;
+    color: $white;
+    opacity: 0;
+    transform: rotateY(0deg);
+    transition: opacity .3s linear,
+      transform 1s cubic-bezier(0, 1.15, 0.26, 0.52);
   }
 }
 
