--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,6 +14,7 @@
 @import "blocks/insights";
 @import "blocks/bredcrumbs";
 @import "blocks/product-grid";
+@import "blocks/bottom";
 @import "blocks/footer";
 
 
@@ -21,6 +22,7 @@
 @import "components/user-nav";
 @import "components/drop-menu";
 @import "components/services";
+@import "components/service";
 @import "components/filter";
 @import "components/product-card";
 @import "components/product-week";
@@ -29,4 +31,5 @@
 @import "components/sponsor";
 @import "components/filter-aside";
 @import "components/recent";
+@import "components/pagination";
 
