--- a/app/scss/blocks/product-grid.scss
+++ b/app/scss/blocks/product-grid.scss
@@ -4,6 +4,7 @@
   &__inner {
     display: grid;
     grid-template-columns: 270px 1fr;
+    grid-gap: 30px;
   }
 
   &__filter {
@@ -11,7 +12,6 @@
   }
 
   &__recent {
-
 
     &.recent {
       margin-bottom: 20px;
