--- a/app/scss/components/product-week.scss
+++ b/app/scss/components/product-week.scss
@@ -1,18 +1,21 @@
 .product-week {
   max-width: calc(50% - 15px);
+  width: 100%;
   background-color: lighten($bg, 11%);
   position: relative;
-  padding: 86px 143px 88px 330px;
+  padding: 86px 60px 88px 330px;
 
   @include breakpoint($tablet-bp) {
     padding: 60px 2px 60px 300px;
   }
 
   &__image {
+    max-width: 222px;
+    height: 400px;
     position: absolute;
     // right: 500px;
     top: -94px;
-    left: 0;
+    left: 90px;
 
      @include breakpoint($mobile-bp) {
     top: 20px;
@@ -21,7 +24,7 @@
 
   &__img {
     max-width: 100%;
-    min-height: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
 
