--- a/app/scss/components/object-new.scss
+++ b/app/scss/components/object-new.scss
@@ -1,35 +1,58 @@
 .object-new {
+  position: relative;
   max-width: 370px;
   min-height: 250px;
   width: 100%;
   margin-left: 30px;
   margin-bottom: 30px;
-  // padding: 40px 0 30px 40px;
+  
   background-color: rgb(248, 248, 248);
-  position: relative;
   overflow: hidden;
+
+  &::after {
+
+    @include breakpoint($mobile-bp) {
+      content: '';
+      position: absolute;
+      min-width: 100%;
+      min-height: 100%;
+      top: 0;
+      left: 0;
+
+      background-color: darken($title, 45%);
+      opacity: 0.2;
+      z-index: 5;
+      mix-blend-mode: color-burn;
+    }
+  }
+
 
 
   &__link {
     padding: 40px 0 30px 40px;
     height: 100%;
     display: block;
+    position: relative;
+
     z-index: 1;
     transition: all 0.3s linear;
-    position: relative;
 
     &::before {
       content: '';
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: darken($text, 15%);
-      opacity: 0;
-      z-index: 2;
       top: 0;
       left: 0;
+
+      z-index: 2;
+
+      background-color: darken($text, 15%);
+      opacity: 0;
       transition: opacity 0.3s linear;
     }
+
+
 
     &:active {
 
@@ -67,10 +90,12 @@
     max-width: 180px;
     width: 100%;
     margin-bottom: 10px;
+
     @extend %dmsans-700;
     font-size: 20px;
     line-height: 1.2;
     color: darken($title, 20%);
+
     transition: color 0.3 linear;
   }
 
@@ -85,16 +110,41 @@
     position: absolute;
     bottom: 0;
     right: 0;
+    max-width: 100%;
+
     z-index: 1;
+
     overflow: hidden;
+
+     &::after {
+
+       @include breakpoint($mobile-bp) {
+         content: '';
+         position: absolute;
+         min-width: 100%;
+         min-height: 100%;
+         top: 0;
+         left: 0;
+
+         z-index: 5;
+
+         background-color: darken(red, 5%);
+         opacity: 1;
+         mix-blend-mode: color-burn;
+       }
+     }
   }
 
   &__img {
     display: block;
     width: 100%;
     height: 100%;
+
     object-fit: cover;
     transform: scale(1);
+    
     transition: transform 0.3s linear;
+
+    
   }
 }
