--- a/app/scss/global/_libs.scss
+++ b/app/scss/global/_libs.scss
@@ -2,3 +2,5 @@
 @import "../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox";
 @import "../../node_modules/ion-rangeslider/css/ion.rangeSlider";
 @import "../../node_modules/rateyo/src/jquery.rateyo";
+@import "../../node_modules/swiper/swiper-bundle";
+@import "../../node_modules/swiper/components/effect-cube/effect-cube";
