--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,6 +15,9 @@
 @import "blocks/bredcrumbs";
 @import "blocks/product-grid";
 @import "blocks/bottom";
+@import "blocks/about";
+@import "blocks/sub-about";
+@import "blocks/our";
 @import "blocks/footer";
 
 
@@ -32,4 +35,6 @@
 @import "components/filter-aside";
 @import "components/recent";
 @import "components/pagination";
+@import "components/advantage";
+@import "components/our-profile";
 
