--- a/app/scss/blocks/main-slider.scss
+++ b/app/scss/blocks/main-slider.scss
@@ -2,7 +2,7 @@
   padding-top: 146px;
 
   &__inner {
-    padding: 95px 180px 28px 300px;
+    padding: 95px 180px 0 300px;
     background-color: $bg;
 
     @include breakpoint($desktop-bp) {
@@ -14,22 +14,34 @@
 
     li {
       margin: 0 6px;
+
+      @include breakpoint($desktop-bp) {
+        margin: 6px 6px;
+      }
     }
 
     button {
       width: 30px;
       height: 30px;
+
       padding: 0;
+
       border-radius: 50%;
+      border: 1px solid transparent;
       background-color: rgba($white, 0.32);
+
       font-size: 12px;
       line-height: 2.5;
       @extend %rubik-500;
-      border: 1px solid transparent;
       cursor: pointer;
+
       transition: background-color 0.3s linear,
         border-color 0.3s linear;
       outline: transparent;
+
+      @include breakpoint($desktop-bp) {
+        box-shadow: inset 0px -3px 3px $accent;
+      }
 
       @include breakpoint($mobile-bp) {
         height: 5px;
@@ -37,14 +49,13 @@
         font-size: 0;
       }
 
-
-      &:focus {
-        background-color: lighten($grey, 40%);
-      }
-
       &:hover {
         background-color: rgba($white, 0.6);
         border-color: darken($bg, 10%);
+      }
+
+      &:focus {
+        background-color: lighten($grey, 40%);
       }
 
       &:active {
@@ -64,7 +75,8 @@
       flex-direction: column;
       left: auto;
       right: 0;
-      top: 40%;
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
 
     @include breakpoint($mobile-bp) {
@@ -85,6 +97,10 @@
   &__box {
     display: flex;
     justify-content: space-between;
+
+    @include breakpoint($tablet-bp) {
+      display: block;
+    }
   }
 
   &__content {
@@ -93,16 +109,26 @@
     @include breakpoint($desktop-bp) {
       padding-top: 26px;
     }
+
+    @include breakpoint($mobile-bp) {
+      padding-top: 40px;
+    }
   }
 
   &__title {
     max-width: 464px;
-    margin-bottom: 46px;
+    margin: 0 20px 46px 0;
+
     color: $title;
     font-size: 72px;
     line-height: 1;
     @extend %rubik-500;
     text-transform: uppercase;
+
+    @include breakpoint($tablet-bp) {
+      max-width: 100%;
+      margin-right: 0;
+    }
 
     @include breakpoint($mobile-bp) {
       font-size: 36px;
@@ -124,17 +150,14 @@
   }
 
   &__link {
-    padding: 23px 100px 20px 30px;
-    @extend %rubik-500;
+    position: relative;
     display: inline-block;
+    padding: 23px 100px 20px 30px;
+
+    @extend %rubik-500;
     @extend %btn;
     transition: background-color 0.4s linear;
-    position: relative;
     outline: transparent;
-
-    @include breakpoint($mobile-bp) {
-      display: block;
-    }
 
     &::after {
       content: '';
@@ -143,16 +166,17 @@
       height: 10px;
       right: 20px;
       top: 50%;
+
       transform: translateY(-50%);
       background-image: url(../images/icon/arrow-btn.svg);
     }
 
-    &:focus {
-      color: $title;
-    }
-
     &:hover {
       background-color: darken($accent, 10%);
+    }
+
+    &:focus {
+      color: $title;
     }
 
     &:active {
@@ -162,28 +186,48 @@
 
   &__img-box {
     position: relative;
-    padding: 170px 100px 200px 0;
+    padding: 170px 100px 228px 0;
+
+    @include breakpoint($desktop-bp) {
+      padding: 85px 50px 0px 0;
+    }
+
+    @include breakpoint($tablet-bp) {
+      margin-top: 15%;
+      padding: 0;
+    }
 
     &::before {
       content: '';
       position: absolute;
-      background: rgb(255, 255, 255);
-      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 1) 100%);
-      border-radius: 50%;
-      background-position: right;
       height: 634px;
       width: 609px;
       right: 0;
       top: 0;
+
+      background: rgb(255, 255, 255);
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 1) 100%);
+      border-radius: 50%;
+      background-position: right;
+
       z-index: -1;
-    }
 
-    @include breakpoint($desktop-bp) {
-      padding: 0;
+      @include breakpoint($desktop-bp) {
+        max-height: 100%;
+        min-width: 100%;
+        right: 50px;
+        top: 28px;
+      }
 
-      &::before {
-        width: 0;
-        height: 0;
+      @include breakpoint($tablet-bp) {
+        top: 50%;
+        left: 0;
+
+        transform: translateY(-50%) rotate(180deg);
+      }
+
+      @include breakpoint($mobile-bp) {
+        display: none;
       }
     }
   }
@@ -191,11 +235,5 @@
   &__img {
     max-width: 100%;
     max-height: 100%;
-
-    @include breakpoint($desktop-bp) {
-      width: 0;
-      height: 0;
-    }
-
   }
 }
