--- a/app/scss/blocks/week.scss
+++ b/app/scss/blocks/week.scss
@@ -73,54 +73,59 @@
   &__product-week {
 
     &.product-week {
-
       @include breakpoint($desktop-bp) {
         max-width: 100%;
         margin-bottom: 120px;
+      }
 
-        &:last-child {
+      &:last-child {
+        @include breakpoint($desktop-bp) {
           margin-bottom: 0;
-        }
-
-        &:nth-child(odd) {
-          text-align: right;
-          padding-left: 260px;
-          padding-right: 30px;
-
-          .product-week__image {
-            left: 20px;
-          }
-
-          .product-week__link {
-            align-self: flex-end;
-          }
-        }
-
-        &:nth-child(even) {
-          padding-left: 30px;
-          padding-right: 200px;
-
-          .product-week__image {
-
-            right: 20px;
-            left: auto;
-          }
         }
       }
 
-      @include breakpoint($desktop-bp) {
-        margin-bottom: 60px;
+      &:nth-child(odd) {
+        @include breakpoint($desktop-bp) {
+          text-align: right;
+          padding-left: 260px;
+          padding-right: 30px;
+        }
 
-
-        &:nth-child(odd) {
+        @include breakpoint($tablet-bp) {
           text-align: right;
           padding-left: 120px;
           padding-right: 15px;
         }
 
-        &:nth-child(even) {
-          padding-left: 15px;
-          padding-right: 120px;
+        .product-week__image {
+          @include breakpoint($desktop-bp) {
+            left: 20px;
+          }
+        }
+
+        .product-week__link {
+          @include breakpoint($desktop-bp) {
+            align-self: flex-end;
+          }
+        }
+      }
+
+      &:nth-child(even) {
+        @include breakpoint($desktop-bp) {
+          padding-left: 30px;
+          padding-right: 200px;
+        }
+
+        @include breakpoint($tablet-bp) {
+            padding-left: 15px;
+            padding-right: 120px;
+        }
+
+        .product-week__image {
+          @include breakpoint($desktop-bp) {
+            right: 20px;
+            left: auto;
+          }
         }
       }
     }
