--- a/app/scss/components/drop-menu.scss
+++ b/app/scss/components/drop-menu.scss
@@ -21,6 +21,7 @@
 
   &__list {
     position: absolute;
+    width: max-content;
     left: 50%;
     top: 20px;
     border-top: 2px solid tomato;
@@ -38,7 +39,6 @@
         border-bottom: 1px solid $bg;
       }
     }
-
   }
 
   &__link {
