--- a/app/scss/components/product-card.scss
+++ b/app/scss/components/product-card.scss
@@ -1,13 +1,14 @@
 .product-card {
+  position: relative;
   display: flex;
   flex-direction: column;
   flex: 0 0 270px;
   min-height: 380px;
   padding: 30px;
+
   background-color: $white;
   border-radius: 10px;
   box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
-  position: relative;
 
   &:hover {
 
@@ -24,6 +25,7 @@
     display: block;
     max-width: 100%;
     min-height: 100%;
+
     object-fit: cover;
     object-position: center;
   }
@@ -34,6 +36,7 @@
 
   &__name {
     margin-bottom: 12px;
+
     @extend %dmsans-500;
     font-size: 16px;
     line-height: 1.2;
@@ -70,6 +73,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: opacity 0.4s linear;
@@ -80,10 +84,23 @@
     display: grid;
     place-items: center;
     padding: 0;
+
     @extend %btn;
     font-size: 0;
     background-color: transparent;
     outline: transparent;
+
+    &--link,
+    &--btn {
+      margin: 0 20px;
+    }
+
+    &--btn-active {
+
+      path {
+        fill: green;
+      }
+    }
 
     svg {
       filter: drop-shadow(-2px 2px 2px rgba(252, 215, 182, 0.9));
@@ -98,10 +115,11 @@
       position: absolute;
       width: 46px;
       height: 46px;
+
       border-radius: 50%;
       background-color: $white;
       z-index: -1;
-      box-shadow: inset 0px -3px 3px #fcd7b6;
+      box-shadow: inset 0px -3px 3px $bg;
       transition: background-color 0.4s linear,
         box-shadow 0.3s linear;
     }
@@ -118,13 +136,6 @@
       }
     }
 
-    &:active {
-
-      path {
-        fill: darken(red, 20%);
-      }
-    }
-
     &:focus {
 
       &::before {
@@ -135,11 +146,13 @@
         fill: darken($white, 10%);
       }
     }
-  }
 
-  &__link,
-  &__btn {
-    margin: 0 20px;
+    &:active {
+
+      path {
+        fill: darken(red, 20%);
+      }
+    }
   }
 
   // &__btn-heart {
