--- a/app/scss/components/service.scss
+++ b/app/scss/components/service.scss
@@ -10,32 +10,12 @@
     background-repeat: no-repeat;
   }
 
-  &--support,
-  &--delivery,
-  &--card {
-
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 0px;
-      @extend %hover-bg;
-
-      @include breakpoint($tablet-bp) {
-        height: 1px;
-      }
-    }
-  }
-
   &--support {
 
     &::before {
       width: 52px;
       height: 54px;
       background-image: url('../images/icon/support.svg');
-
     }
   }
 
@@ -57,6 +37,69 @@
     }
   }
 
+  &--satisfy,
+  &--products,
+  &--time,
+  &--brands {
+
+    .service__title {
+      font-size: 36px;
+    }
+
+    .service__content  {
+
+      p{
+        font-size: 18px;
+        @extend %dmsans-700;
+      }
+    }
+
+    &::before {
+      top: auto;
+      bottom: 88px;
+
+      @include breakpoint($tablet-bp) {
+        bottom: 120px;
+      }
+    }
+  }
+
+  &--satisfy {
+
+    &::before {
+      width: 73px;
+      height: 59px;
+      background-image: url('../images/icon/satisfy.svg');
+    }
+  }
+
+  &--products {
+
+    &::before {
+      width: 72px;
+      height: 51px;
+      background-image: url('../images/icon/products.svg');
+    }
+  }
+
+  &--time {
+
+    &::before {
+      width: 78px;
+      height: 64px;
+      background-image: url('../images/icon/working-time.svg');
+    }
+  }
+
+  &--brands {
+
+    &::before {
+      width: 60px;
+      height: 64px;
+      background-image: url('../images/icon/brands.svg');
+    }
+  }
+
   &__title {
     margin-bottom: 15px;
     font-size: 18px;
@@ -66,6 +109,7 @@
 
   &__content {
     max-width: 205px;
+    min-width: 100%;
 
     @include breakpoint($tablet-bp) {
       max-width: 100%;
