--- a/app/scss/components/services.scss
+++ b/app/scss/components/services.scss
@@ -9,15 +9,58 @@
   }
 
   &__item {
+    position: relative;
     flex: 0 0 309px;
     padding-left: 90px;
-    
 
     @include breakpoint($tablet-bp) {
       margin-bottom: 35px;
-      padding-bottom: 5px;
+      padding-bottom: 35px;
     }
 
-   
+    &::after {
+
+      @include breakpoint($tablet-bp) {
+        content:'';
+        position: absolute; 
+        bottom: 0; 
+        left: 0;
+        
+        width: 100%;
+        height: 1px;
+
+        background: linear-gradient(90deg, rgba(163, 187, 200, 1) 0%, rgba(252, 215, 182, 1) 100%);
+      }
+    }
+
+    &:not(:last-child) {
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: -45px;
+        right: 0;
+
+        width: 1px;
+        height: 164px;
+
+        background-color: $accent;
+
+        @include breakpoint($tablet-bp) {
+            top: auto;
+            bottom: 0;
+            left: 0;
+
+            width: 100%;
+            height: 1px;
+
+            background: linear-gradient(90deg, rgba(163, 187, 200, 1) 0%, rgba(252, 215, 182, 1) 100%);
+        }
+      }
+    }
+  }
+
+  &__part {
+    flex: 0 0 25%;
   }
 }
